--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
 }
 
 dependencies {
-
+    debugImplementation "com.google.truth:truth:1.1.2"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -88,4 +88,7 @@ dependencies {
 
     //Swife Refresh
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
+    //testing
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 }
