--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ ext {
     paging_version = '3.1.1'
     room_version = '2.4.2'
     okhttpLoggingInterceptor_version = '4.7.2'
+    archTestingVersion = "2.1.0"
 }
 task clean(type: Delete) {
     delete rootProject.buildDir
