--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,6 @@ android {
 }
 
 dependencies {
-    debugImplementation "com.google.truth:truth:1.1.2"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -91,4 +90,7 @@ dependencies {
 
     //testing
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.mockito:mockito-inline:2.24.5"
+    debugImplementation "com.google.truth:truth:1.1.2"
+    androidTestImplementation 'org.mockito:mockito-android:2.24.5'
 }
