--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,4 +93,5 @@ dependencies {
     testImplementation "org.mockito:mockito-inline:2.24.5"
     debugImplementation "com.google.truth:truth:1.1.2"
     androidTestImplementation 'org.mockito:mockito-android:2.24.5'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
 }
